--- a/src/templates/landing/common/_footer.html
+++ b/src/templates/landing/common/_footer.html
@@ -8,7 +8,7 @@
             </a>
         {% endif %}
         <div class="footerRedesContent">
-            <h4>Redes socicales</h4>
+            <h4>Redes sociales</h4>
             <div class="footerRedes f aic jcsb">
                 {% if footer.facebook %}
                     <a href="{{footer.facebook}}" target="_blank"><img src="/static/web/img/facebook.svg" alt=""></a>
