--- a/src/templates/landing/common/_header.html
+++ b/src/templates/landing/common/_header.html
@@ -46,7 +46,7 @@
             <div class="headerOptionsSessions">
                 <!-- OPCIÒN CUANDO NO ESTA LOGEADO -->
                 <div class="headerOptionLogout f aic jcfe">
-                    <a href="" class="headerButtonLogin login">Iniciar Sesión</a>
+                    <a href="" class="headerButtonLogin login">Inicia Sesión</a>
                     <a href="" class="headerButtonRegistrate">Regístrate</a>
                 </div>
                 <!-- OPCIÒN CUANDO ESTA LOGEADO -->
