--- a/src/templates/landing/common/_header.html
+++ b/src/templates/landing/common/_header.html
@@ -82,7 +82,7 @@
         <div class="gParrafo login-message-warning">
         </div>
         <div class="g8Bottom">
-            <h4><a class="return-login-form" href="#"><- Regresar</a></h4>
+            <a class="return-login-form" href="#"><- Regresar</a>
         </div>
     </div>
     <div class="g8Form login-form">
