--- a/src/templates/landing/evento-detalle.html
+++ b/src/templates/landing/evento-detalle.html
@@ -10,14 +10,20 @@
 
 
 <section class="b1 scrollWrap">
-    <picture class="imgCover">
-        <!-- imagen mobile -->
-        <source srcset="{{company.mobile_banner.url}}" media="(max-width: 767px)">
-        <!-- imagen desktop -->
-        <source srcset="{{company.banner.url}}" media="(max-width: 768px)">
-        <!-- imagen desktop -->
-        <img src="{{company.banner.url}}" width="1920" height="713"  alt="Myimage">
-    </picture>
+    {% if company.video_file %}
+        <video width="640" height="360" autoplay loop muted>
+            <source src="{{company.video_file.url}}" type="video/mp4">
+        </video>
+    {% else %}
+        <picture class="imgCover">
+            <!-- imagen mobile -->
+            <source srcset="{{company.mobile_banner.url}}" media="(max-width: 767px)">
+            <!-- imagen desktop -->
+            <source srcset="{{company.banner.url}}" media="(max-width: 768px)">
+            <!-- imagen desktop -->
+            <img src="{{company.banner.url}}" width="1920" height="713"  alt="Myimage">
+        </picture>
+    {% endif %}
     <!--
         Tres posiciones verticales
         Agregar la clase : top , center, bottom
@@ -27,7 +33,7 @@
             <h2 class="scrollItem">{{home_page.first_title|default:""}}</h2>
             <h1 class="scrollItem">{{home_page.main_title|default:""}}</h1>
             <h3 class="scrollItem">{{home_page.secondary_title|default:""}}</h3>
-            {% if home_page.home_video_url %}
+            {% if home_page.home_video_url and not company.video_file %}
                 <a href="#" class="clickVideo popup scrollItem" data-urlvideo="{{home_page.home_video_url}}">
                     <span>Ver video</span>
                     <!-- linea circular animada administrable -->
@@ -110,7 +116,6 @@
                 <h4>Agenda</h4>
                 <h3 class="gTitle">Programas y Ponentes</h3>
             </div>
-            <!-- Elemento azul hacerlo div  -->
             <div class="b4SelectWrap f aic jcfe">
                {% comment %}
                 <div class="b4Select">
@@ -145,7 +150,7 @@
                 <h3>Filtros</h6>
                 <div class="b4FilterItemInfo">
                     <ul>
-                        <li class="b4ItemOption">
+                        <li class="b4ItemOption {% if not filtered_categories %}active{% endif %}" data-category="all">
                             <div class="optionRadio pr" data-color-active="#008AC9" style="border: 1px solid #000">
                                 <span style="background: #008AC9"></span>
                             </div>
@@ -155,12 +160,11 @@
                 </div>
                 {% for f in filters %}
                 <div class="b4FilterItem">
-                    <!-- ADMINISTRAR EL ATRIBUT "data-color-active" en caso se necesite cambiar de color -->
                     <a href="#" class="b4FilterItemClick">{{f.name}}</a>
                     <div class="b4FilterItemInfo">
                         <ul>
                             {% for category in f.ordered_categories %}
-                            <li class="b4ItemOption">
+                            <li class="b4ItemOption {% if category.filter_name in filtered_categories %}active{% endif %}" data-category="{{category.filter_name}}" data-filter="{{f.filter_name}}">
                                 <div class="optionRadio pr" data-color-active="#008AC9" style="border: 1px solid #000">
                                     <span style="background: #008AC9"></span>
                                 </div>
@@ -175,10 +179,10 @@
 
             <div class="b4WrapList b4InfoTab">
                 {% for event in events %}
-                    {% for schedule in event.get_schedules %}
+                    {% for schedule in event.filtered_schedules %}
                         {% if schedule.description %}
-                        <div class="b4Item f aic jcsb ">
-                            <div class="b4ItemLeft f aifs jcfs {% if not schedule.image %}noImage{% endif %}">
+                        <div class="b4Item f aic jcsb {% if not schedule.image %}noImage{% endif %}">
+                            <div class="b4ItemLeft f aifs jcfs">
                                 {% if schedule.image %}
                                     <div class="b4Img pr">
                                         <picture class="imgCover">
@@ -190,9 +194,6 @@
                                 {% else %}
                                 {% endif %}
                                 <div class="b4Info">
-                                    <!-- Existe dos opcions de "Ver en vivo o Volver a ver" -->
-                                    <!-- <a href="#" class="b4Envivo">En vivo <img src="/static/web/img/live.svg" alt=""></a> -->
-                                    <!-- <a href="#" class="b4VolverVer a ver clickVideo popup" data-urlvideo="https://www.youtube.com/watch?v=l6_nRqIz_9o">Volver a ver</a> -->
                                     {% if logged_user %}
                                         {% if schedule.get_current_status == 'upcoming' %}
                                             <a href="#" class="b4Agendar agregarCalendario" data-item-id="{{schedule.id}}"><span>Agendar</span></a>
@@ -556,9 +557,9 @@
                     let getTextNameOption = this.textContent;
                     let currentUrl = window.location.href;
                     if(getTextNameOption == 'Todos'){
-                        window.location.href = '/'
+                        window.location.href = '/#agenda'
                     }else{
-                        if(!currentUrl.includes('#agenda')){
+                        if(!currentUrl.includes('#')){
                             let url = new URL(currentUrl + '#agenda');
                             url.searchParams.set('date', getTextNameOption);
                             window.location.href = url.toString();
@@ -588,6 +589,10 @@
         let elb4ItemOption = document.getElementsByClassName("b4ItemOption");
         for(const b4ItemOption of elb4ItemOption){
             b4ItemOption.addEventListener("click",function(){
+                let filter = this.getAttribute('data-filter')
+                let category = this.getAttribute('data-category')
+                console.log(filter)
+                console.log(category)
                 let elchildrenOptions = this.parentNode.children
                 let getColorCheckRadio = this.children[0].dataset.colorActive
                 for(const childrenOptions of elchildrenOptions){
@@ -596,6 +601,25 @@
                 }
                 this.children[0].style.border = `1px solid ${getColorCheckRadio}`;
                 this.classList.add('active')
+                let currentUrl = window.location.href;
+                if (category == 'all'){
+                    let params = new URL(document.location.toString()).searchParams;
+                    if(params.get('date')){
+                        let filtered_date = params.get('date')
+                        let url = new URL(window.location.origin + "/#agenda");
+                        url.searchParams.set('date', filtered_date);
+                        window.location.href = url.toString();
+                    }else{
+                        let url = new URL(currentUrl);
+                        url.searchParams.set(filter, category);
+                        window.location.href = url.toString();
+                    }
+                }else{
+                    let url = new URL(currentUrl);
+                    url.searchParams.set(filter, category);
+                    window.location.href = url.toString();
+                }
+
             });
         }
 
